Fix to try to align logo immaculately for all device pixel ratios

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -206,7 +206,7 @@ strong code {
 .header .logo>a {
   line-height: 0;
   filter: saturate(1.666);
-  margin-top: 6.333px;
+  margin-top: 7.666px;
 }
 
 .header .logo>a>svg {
